# Nexus

./: README.md  app.py  issues.md  main.py  mlflow.db  mongo.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Artifacts/11_02_2025_16_01_20/data_validation/drift_report/: drift_report.yaml
Artifacts/12_08_2025_23_16_57/data_ingestion/feature_store/: phisingData.csv
Artifacts/12_08_2025_23_16_57/data_validation/drift_report/: drift_report.yaml
Artifacts/12_09_2025_00_57_50/data_ingestion/ingested/: train.csv
Artifacts/12_09_2025_00_57_50/data_transformation/transformed/: test.npy
Artifacts/12_12_2025_11_55_58/data_validation/validated/: test.csv
NetworkSecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
NetworkSecurity/constant/training_pipeline/: __init__.py
NetworkSecurity/entity/: artifact.py  config.py
NetworkSecurity/exception/: exception.py
NetworkSecurity/logging/: logging.py
NetworkSecurity/pipeline/: training_pipeline.py
NetworkSecurity/utils/: estimator.py  ml_utils.py  utils.py
logs/: 11_02_2025_15_54_13  11_02_2025_15_57_36  11_02_2025_15_59_56  11_02_2025_16_01_20  11_02_2025_16_04_46  12_08_2025_23_10_42  12_08_2025_23_16_01  12_08_2025_23_16_57  12_09_2025_00_57_49  12_09_2025_23_37_07  12_12_2025_11_15_34  12_12_2025_11_18_24  12_12_2025_11_18_27  12_12_2025_11_18_35  12_12_2025_11_33_40  12_12_2025_11_55_56  12_12_2025_12_26_39  12_14_2025_01_07_24  12_14_2025_01_08_40
mlartifacts/0/models/m-05fb0f787537478493b3c9b01ccdcfc8/artifacts/: MLmodel  requirements.txt
mlartifacts/0/models/m-3fce6cc556db40f1895de7f087eed024/artifacts/: MLmodel  model.pkl
mlartifacts/0/models/m-640ebae739974fcc8c744996f3440cb3/artifacts/: MLmodel
mlartifacts/0/models/m-a38f238576d948aaa6f45d1216c605fe/artifacts/: MLmodel
mlartifacts/0/models/m-c63a32ed1c4b453ea24fa9b1d4b67a46/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/0/models/m-cf66733871ac4099a31b84221c25bb0d/artifacts/: MLmodel
src/cloud/: s3_syncer.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constant/training_pipeline/: __init__.py
src/entity/: artifact.py  config.py
src/exception/: exception.py
src/logger/: logger.py
src/logging/: logging.py
src/pipeline/: training_pipeline.py
src/utils/: estimator.py  ml_utils.py  utils.py
templates/: index.html
